Fixed the content shifting to the left bug

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,9 @@ img {
     background-color: white;
     padding: 0rem 3rem 0rem 3rem;
     font-size: 16px;
+    -webkit-box-shadow: 0px 7px 16px -1px rgba(0,0,0,0.53);
+    -moz-box-shadow: 0px 7px 16px -1px rgba(0,0,0,0.53);
+    box-shadow: 0px 7px 16px -1px rgba(0,0,0,0.53);
 }
 
 #crh-nav-styles ul .nav-item .nav-link:hover {
@@ -322,4 +325,10 @@ footer article:nth-of-type(2) ul {
 }
 .update-this-text {
     border: 3px solid yellow !important;
+}
+form input {
+    display: block;
+    width: 100%;
+    border: 1px solid grey;
+    font-size: inherit;
 }
